Completed most of header and hero on top of page. Also completed the center w/4 images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac's the Man</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -21,40 +21,40 @@
         <li>Link Three</li>
     </ul>
     </div>
+
     <div class='hero'>
-        <h1 class="hero-title">This website is awesome</h1>
-        <div>This site has some subtext that goes here under main title. smaller font and color is lower contrast.</p>
-        <button type='button'>Sign Up</button>
-        <img src="../images/haha.jpg" alt="Mac with a pipe" style='width: 250px;'>
+        <div class='hero-left'>
+            <h1 class="hero-title">This website is awesome</h1>
+            <div class='hero-text'>This site has some subtext that goes here under main title. smaller font and color is lower contrast.</div>
+            <button type='button'>Sign Up</button>
+        </div>
+        <img  src="../images/haha.jpg" alt="Mac with a pipe" style='width: 250px;'>
     </div>
 <!-- </div> -->
-
-<div class='info-text'>
-    <div>Random Info</div>
+<div class='info-title'>Mac Miller Discography</div>
     <div class='container'>
         <div class='info'>
-            <!-- <img src > -->
+            <img class='rounded-covers' src ="images/WMWTSO.jpg" alt='Watching Movies with the Sound Off by Mac Miller Album cover.' style='width: 200px';>
+            <div class='text'>Random faksfj  ak;fjasdjf af;adfajsdfja  ;lkaj f album info</div>
+        </div>
+        <div class='info'>
+            <img class='rounded-covers' src='images/faces.jpg' alt='Faces by Mac Miller album cover'  style='width: 200px'>
             <div class='text'>Random mac album info</div>
         </div>
         <div class='info'>
-            <!-- <img src > -->
+            <img class='rounded-covers' src='/images/swimming.png' alt='Swimming by Mac Miller album cover'  style='width: 200px' >
             <div class='text'>Random mac album info</div>
         </div>
         <div class='info'>
-            <!-- <img src > -->
-            <div class='text'>Random mac album info</div>
-        </div>
-        <div class='info'>
-            <!-- <img src > -->
+            <img class='rounded-covers' src='images/circles.png'alt='Circles by Mac Miller album cover'  style='width: 200px' >
             <div class='text'>Random mac album info</div>
         </div>
 
     </div>
 
-</div>
-<div class='quote'>
+<div class='quote-section'>
     <blockquote>
-        <p class='quote'>super deep quote about cool stuff i guess</p>
+        super deep quote about cool stuff i guess
     </blockquote>
     <figcaption> -Mac Miller, some song quote probably.</figcaption>
 </div>
