Completed the quote section

--- a/index.html
+++ b/index.html
@@ -28,35 +28,41 @@
             <div class='hero-text'>This site has some subtext that goes here under main title. smaller font and color is lower contrast.</div>
             <button type='button'>Sign Up</button>
         </div>
-        <img  src="../images/haha.jpg" alt="Mac with a pipe" style='width: 250px;'>
+        <img  src="../images/haha.jpg" alt="Mac with a pipe" style='width: 200px;'>
     </div>
 <!-- </div> -->
 <div class='info-title'>Mac Miller Discography</div>
     <div class='container'>
         <div class='info'>
-            <img class='rounded-covers' src ="images/WMWTSO.jpg" alt='Watching Movies with the Sound Off by Mac Miller Album cover.' style='width: 200px';>
+            <img class='rounded-covers' src ="images/WMWTSO.jpg" alt='Watching Movies with the Sound Off by Mac Miller Album cover.' style='width: 150px';>
             <div class='text'>Random faksfj  ak;fjasdjf af;adfajsdfja  ;lkaj f album info</div>
         </div>
         <div class='info'>
-            <img class='rounded-covers' src='images/faces.jpg' alt='Faces by Mac Miller album cover'  style='width: 200px'>
+            <img class='rounded-covers' src='images/faces.jpg' alt='Faces by Mac Miller album cover'  style='width: 150px'>
             <div class='text'>Random mac album info</div>
         </div>
         <div class='info'>
-            <img class='rounded-covers' src='/images/swimming.png' alt='Swimming by Mac Miller album cover'  style='width: 200px' >
+            <img class='rounded-covers' src='/images/swimming.png' alt='Swimming by Mac Miller album cover'  style='width: 150px' >
             <div class='text'>Random mac album info</div>
         </div>
         <div class='info'>
-            <img class='rounded-covers' src='images/circles.png'alt='Circles by Mac Miller album cover'  style='width: 200px' >
+            <img class='rounded-covers' src='images/circles.png'alt='Circles by Mac Miller album cover'  style='width: 150px' >
             <div class='text'>Random mac album info</div>
         </div>
 
     </div>
 
 <div class='quote-section'>
-    <blockquote>
+    <!-- <blockquote>
         super deep quote about cool stuff i guess
     </blockquote>
-    <figcaption> -Mac Miller, some song quote probably.</figcaption>
+    <figcaption> -Mac Miller, some song quote probably.</figcaption> -->
+    <figure>
+        <blockquote cite="https://www.huxley.net/bnw/four.html">
+            <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
+        </blockquote>
+        <figcaption>—Aldous Huxley, <cite>Brave New World</cite></figcaption>
+    </figure>
 </div>
 
 <div class='call-to-acton'>
