Mostly Finished. Just need to actually fill the page up with useful stuff.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class='hero-text'>This site has some subtext that goes here under main title. smaller font and color is lower contrast.</div>
             <button type='button'>Sign Up</button>
         </div>
-        <img  src="../images/haha.jpg" alt="Mac with a pipe" style='width: 200px;'>
+        <img  src="../images/haha.jpg" alt="Mac with a pipe" style='width: 300px;'>
     </div>
 <!-- </div> -->
 <div class='info-title'>Mac Miller Discography</div>
@@ -53,10 +53,6 @@
     </div>
 
 <div class='quote-section'>
-    <!-- <blockquote>
-        super deep quote about cool stuff i guess
-    </blockquote>
-    <figcaption> -Mac Miller, some song quote probably.</figcaption> -->
     <figure>
         <blockquote cite="https://www.huxley.net/bnw/four.html">
             <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
@@ -65,15 +61,13 @@
     </figure>
 </div>
 
-<div class='call-to-acton'>
-
+<div class='call-to-action'>
+    <div  class=CTA-text>
+        <h3>Call to Action! It's time!</h3>
+        <p>sign up for whatever reason you'd want</p>
+    </div>
+    <button class='cta-button'type='button'>Sign Up</button>
 </div>
-
-
-
-
-
-
 
 
 <div class="footer">
