Finished final touches

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 <!-- <div  class='hero'> -->
     <div class="header">
     <ul class='left-side'>
-        <li>Header Logo</li>
+        <li><img class='rounded-logo' src ="images/mac-logo.jpg" alt='Mac biting apple' style='width: 100px';></li>
     </ul>
     <ul class='right-side'>
-        <li>Link One</li>
-        <li>Link Two</li>
-        <li>Link Three</li>
+        <li>FAQ</li>
+        <li>About</li>
+        <li>Cart</li>
     </ul>
     </div>
 
     <div class='hero'>
         <div class='hero-left'>
-            <h1 class="hero-title">This website is awesome</h1>
-            <div class='hero-text'>This site has some subtext that goes here under main title. smaller font and color is lower contrast.</div>
+            <h1 class="hero-title">Ez Mac with the Cheesy Raps</h1>
+            <div class='hero-text'>A quick webpage to showcase some of Mac Miller's probjects that I find to be the best.</div>
             <button type='button'>Sign Up</button>
         </div>
         <img  src="../images/haha.jpg" alt="Mac with a pipe" style='width: 300px;'>
@@ -35,19 +35,19 @@
     <div class='container'>
         <div class='info'>
             <img class='rounded-covers' src ="images/WMWTSO.jpg" alt='Watching Movies with the Sound Off by Mac Miller Album cover.' style='width: 150px';>
-            <div class='text'>Random faksfj  ak;fjasdjf af;adfajsdfja  ;lkaj f album info</div>
+            <div class='text'>Watching Movies with the Sound Off, 2013</div>
         </div>
         <div class='info'>
             <img class='rounded-covers' src='images/faces.jpg' alt='Faces by Mac Miller album cover'  style='width: 150px'>
-            <div class='text'>Random mac album info</div>
+            <div class='text'>Faces, 2014, released on streaming 2021</div>
         </div>
         <div class='info'>
             <img class='rounded-covers' src='/images/swimming.png' alt='Swimming by Mac Miller album cover'  style='width: 150px' >
-            <div class='text'>Random mac album info</div>
+            <div class='text'>Swimming, 2018</div>
         </div>
         <div class='info'>
             <img class='rounded-covers' src='images/circles.png'alt='Circles by Mac Miller album cover'  style='width: 150px' >
-            <div class='text'>Random mac album info</div>
+            <div class='text'>Circles, 2020</div>
         </div>
 
     </div>
@@ -55,16 +55,17 @@
 <div class='quote-section'>
     <figure>
         <blockquote cite="https://www.huxley.net/bnw/four.html">
-            <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
+            <p>"There's snowflakes fallin' on my debit card
+                Swear I'm not alive, I couldn't tell you if we ever are."</p>
         </blockquote>
-        <figcaption>—Aldous Huxley, <cite>Brave New World</cite></figcaption>
+        <figcaption>-Mac Miller, <cite>Friends, 2014 </cite></figcaption>
     </figure>
 </div>
 
 <div class='call-to-action'>
     <div  class=CTA-text>
-        <h3>Call to Action! It's time!</h3>
-        <p>sign up for whatever reason you'd want</p>
+        <h3>Want to stay updated on Mac Miller info?</h3>
+        <p>Then sign up here! (not really tho)</p>
     </div>
     <button class='cta-button'type='button'>Sign Up</button>
 </div>
