--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class='hero-text'>A quick webpage to showcase some of Mac Miller's probjects that I find to be the best.</div>
             <button type='button'>Sign Up</button>
         </div>
-        <img  src="../images/haha.jpg" alt="Mac with a pipe" style='width: 300px;'>
+        <img  src="images/haha.jpg" alt="Mac with a pipe" style='width: 300px;'>
     </div>
 <!-- </div> -->
 <div class='info-title'>Mac Miller Discography</div>
@@ -42,7 +42,7 @@
             <div class='text'>Faces, 2014, released on streaming 2021</div>
         </div>
         <div class='info'>
-            <img class='rounded-covers' src='/images/swimming.png' alt='Swimming by Mac Miller album cover'  style='width: 150px' >
+            <img class='rounded-covers' src='images/swimming.png' alt='Swimming by Mac Miller album cover'  style='width: 150px' >
             <div class='text'>Swimming, 2018</div>
         </div>
         <div class='info'>
